--- a/Labbar/Lab4/ArduinoBluetoothCom/app/build.gradle
+++ b/Labbar/Lab4/ArduinoBluetoothCom/app/build.gradle
@@ -20,7 +20,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -30,4 +30,7 @@ dependencies {
     compile files('libs/org.eclipse.paho.android.service-1.1.1.jar')
     compile files('libs/org.eclipse.paho.client.mqttv3-1.1.1.jar')
     testCompile 'junit:junit:4.12'
+    compile files('libs/weka-stable-3.8.1-SNAPSHOT.jar')
+    compile 'com.android.support:design:26.+'
+    implementation files('libs/opencsv-4.1.jar')
 }
